Mon Jun 18 09:24:04 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/megatec.c: buildbot caught a typo (*sigh*)

Mon Jun 18 09:01:59 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/megatec.c: additional debug info in case commands fail

Wed Jun 13 01:04:38 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - conf/upssched.conf.sample: insert STATEPATH into default PIPEFN and LOCKFN
   lines. (As suggested by Arjen.)

Wed Jun 13 00:55:41 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - scripts/hotplug/libhid.usermap, scripts/udev/nut-usbups.rules.in:
   Add product ID for Belkin F6H375-USB

Wed Jun 13 00:29:29 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - drivers/belkin-hid.c, data/driver.list: Add product ID for F6H375-USB.

Wed Jun  6 19:52:01 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/main.c, man/nutupsdrv.8:
   - specifying '-a <id>' is now mandatory when starting a driver, in
     order to prevent problems later on in the configuration process
     (otherwise the upsd server won't see it)
   - removed the possibility to specify a port on the command line (not
     really useful anymore)

Wed Jun  6 09:34:22 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 * data/drivers.list (sync with the Testing branch r957): 
   - fixe a typo on upscode2 driver name
   - add "Fiskars 9200 with UPS Information Unit" compatibility

Tue Jun  5 19:05:48 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/conf.c, drivers/main.c: Prepend driver name to socket again.
   Otherwise we loose control over the socketname, which prevents us
   from creating sockets for autodetected UPSes. This brings the socket
   name in line with the PID name.

Tue Jun  5 13:25:56 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>
 
 * Sync with the Testing branch (r949,952,953):
   - data/drivers.list: removed Geek Squad GS1285U from Cyber Power Systems,
     according to Peter Selinger comment from Jan. 26 2007. The Cyber Power
     model is AE550.